  each time someone stat's the mount point (which could be abused as a
  denial-of-service attack).  If you're concerned, set this to something
  greater than zero (a value of 1 second is currently recommended).
  Warning: if you set this option to any non-zero value, especially a large
  value, and you get ESTALE errors on your particular OS, then set this
  value back to 0 seconds.

- support restarting the automounter's own mount points (only over NFS,
  for now).

- fully support WebNFS as per RFC 2054.  It now tries v3/TCP first, falling
  back to v2/UDP if this doesn't work.  The "webnfs" pseudo-mount options
  has been renamed (again) to "public" to match Solaris 2.

- restructured the restarting of already-mounted filesystems, in the process
  also fixing a problem with restarting nfsx components.

- support escaped slashes, needed for SMB mounts.  Use '\\\/\\\/' in a
  string to get a double slash.

- amd -v now prints domain, host, and hostd values: foo, example.com, and
  foo.example.com, respectively.

- On Linux, if umount(2) failed with EIO or ESTALE, try the new umount2(2)
  system call with MNT_FORCE+MNT_DETACH.  This could be quite helpful to
  unmounting hung mount points that otherwise cannot be fixed without a
  reboot.

- bugs fixed:
	* various memory management problems (leaks, etc)
	* fixed nfsx support
	* fixed a race involving late replies to network queries which
	  arrive after the file system has already been mounted
	* recognize pcfs_args_t fields in FreeBSD 5
	* recognize other mount types in pawd: host, linkx, and nfsx
	* allow exactly one of umount and unmount in type:=program
	* race condition between calls to mntctl() on AIX
	* plock/mlockall wasn't inherited by fork(); moved after
	  daemonizing.
	* fix inconsistency between Socket and TLI RPC timeouts.
	* don't warn when couldn't rmdir a dir with a readonly ancestor.
	* "host" selector also matches against host aliases (CNAMES)

*** Notes specific to am-utils version 6.1b4
